@@ -80,7 +80,7 @@ public class Registers {
 
     @Override
     public String toString() {
-        String n = String.format("A%02x B%02x C%02x D%02x E%02x F%02x H%02x L%02x SP%04x PC%04x Flg%s%s%s%s",
+        String n = "A%02x B%02x C%02x D%02x E%02x F%02x H%02x L%02x SP%04x PC%04x Flg%s%s%s%s".formatted(
                 a & 0xFF, b & 0xFF, c & 0xFF, d & 0xFF, e & 0xFF, f & 0xFF, h & 0xFF, l & 0xFF,
                 sp & 0xFFFF, pc & 0xFFFF,
                 isZ() ? "Z" : "-", isS() ? "S" : "-", isH() ? "H" : "-", isC() ? "C" : "-");
